# maintenance-manager

./: .gitignore  README.md  doover_config.json  pyproject.toml
dashboard-widget/: package-lock.json  package.json  rsbuild.config.ts
dashboard-widget/src/: MaintenanceDashboardWidget.tsx  styles.css
src/dashboard/: __init__.py  app_config.py  application.py
src/maintenance_manager/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py
src/processor/: __init__.py  app_config.py  app_ui.py  application.py
tests/: test_imports.py
